feat/fix: implemented developer skills new dto and fix jobs delete return http code.